<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/cat_margin_16"
        tools:context=".presentation.view.fragment.BreedDescriptionFragment">


        <ImageView
            android:id="@+id/catBreedImageView"
            android:layout_width="301dp"
            android:layout_height="220dp"
            android:layout_marginTop="@dimen/cat_margin_20"
            android:src="@drawable/il_cat_breed_ragdoll"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/catBreedDescTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cat_margin_34"
            android:text="@string/cat_breed_description_title_text_example"
            android:textSize="@dimen/cat_size_25"
            android:textColor="@color/black"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/catBreedCountryRowLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginStart="@dimen/cat_margin_34"
            android:layout_marginEnd="@dimen/cat_margin_34"
            android:layout_marginTop="@dimen/cat_margin_16"
            >
            <TextView
                android:id="@+id/catBreedDescCountryLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:padding="@dimen/cat_margin_8"
                android:textSize="@dimen/cat_size_18"
                android:textColor="@color/black"
                android:background="@color/pear_100"
                android:gravity="center"
                android:text="@string/cat_breed_description_country_label"/>
            <TextView
                android:id="@+id/catBreedDescCountryTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:padding="@dimen/cat_margin_8"
                android:textSize="@dimen/cat_size_18"
                android:layout_marginStart="@dimen/cat_margin_8"
                android:textColor="@color/black"
                android:background="@color/orange_100"
                android:gravity="center"
                tools:text="@string/cat_breed_description_country_text_example"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/catBreedOriginRowLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginStart="@dimen/cat_margin_34"
            android:layout_marginEnd="@dimen/cat_margin_34"
            android:layout_marginTop="@dimen/cat_margin_8"
            >
            <TextView
                android:id="@+id/catBreedDescOriginLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:padding="@dimen/cat_margin_8"
                android:textSize="@dimen/cat_size_18"
                android:textColor="@color/black"
                android:background="@color/pear_100"
                android:gravity="center"
                android:text="@string/cat_breed_description_origin_label"/>
            <TextView
                android:id="@+id/catBreedDescOriginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:padding="@dimen/cat_margin_8"
                android:textSize="@dimen/cat_size_18"
                android:layout_marginStart="@dimen/cat_margin_8"
                android:textColor="@color/black"
                android:background="@color/orange_100"
                android:gravity="center"
                android:text="@string/cat_breed_description_origin_text_example"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/catBreedCoatRowLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginStart="@dimen/cat_margin_34"
            android:layout_marginEnd="@dimen/cat_margin_34"
            android:layout_marginTop="@dimen/cat_margin_8"
            >
            <TextView
                android:id="@+id/catBreedDescCoatLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:padding="@dimen/cat_margin_8"
                android:textSize="@dimen/cat_size_18"
                android:textColor="@color/black"
                android:background="@color/pear_100"
                android:gravity="center"
                android:text="@string/cat_breed_description_coat_label"/>
            <TextView
                android:id="@+id/catBreedDescCoatTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:padding="@dimen/cat_margin_8"
                android:textSize="@dimen/cat_size_18"
                android:layout_marginStart="@dimen/cat_margin_8"
                android:textColor="@color/black"
                android:background="@color/orange_100"
                android:gravity="center"
                android:text="@string/cat_breed_description_coat_text_example"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/catBreedPatternRowLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginStart="@dimen/cat_margin_34"
            android:layout_marginEnd="@dimen/cat_margin_34"
            android:layout_marginTop="@dimen/cat_margin_8"
            >
            <TextView
                android:id="@+id/catBreedDescPatternLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:padding="@dimen/cat_margin_8"
                android:textSize="@dimen/cat_size_18"
                android:textColor="@color/black"
                android:background="@color/pear_100"
                android:gravity="center"
                android:text="@string/cat_breed_description_pattern_label"/>
            <TextView
                android:id="@+id/catBreedDescPatternTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:padding="@dimen/cat_margin_8"
                android:textSize="@dimen/cat_size_18"
                android:layout_marginStart="@dimen/cat_margin_8"
                android:textColor="@color/black"
                android:background="@color/orange_100"
                android:gravity="center"
                android:text="@string/cat_breed_description_pattern_text_example"/>
        </LinearLayout>

    </LinearLayout>
</layout>