<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.view.fragment.MenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/catMenuContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/cat_margin_20">

        <TextView
            android:id="@+id/catMenuInstructionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cat_menu_instruction_margin_top"
            android:text="@string/cat_menu_fact_instruction"
            android:textSize="@dimen/cat_menu_instruction_text_size"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/catFactCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cat_margin_85"
            android:layout_marginStart="@dimen/cat_margin_20"
            android:layout_marginEnd="@dimen/cat_margin_20"
            app:layout_constraintTop_toBottomOf="@id/catMenuInstructionTextView">

            <LinearLayout
                android:id="@+id/catMenuFactContainerConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/CatMenuFactTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/melon"
                    android:gravity="center"
                    android:text="@string/cat_fact_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/cat_menu_fact_text_size"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/catMenuFactImageView"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_weight="10"
                        android:layout_margin="@dimen/cat_margin_8"
                        android:contentDescription="@string/cat_fact_title"
                        android:padding="8dp"
                        android:src="@drawable/ic_cat_seated" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/catMenuFactDescriptionTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/cat_margin_8"
                            android:layout_marginTop="@dimen/cat_margin_12"
                            android:layout_marginEnd="@dimen/cat_margin_8"
                            android:text="@string/cat_menu_fact_description"
                            />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/catMenuFactButton"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="end"
                            android:layout_margin="@dimen/cat_margin_8"
                            android:insetLeft="0dp"
                            android:insetTop="0dp"
                            android:insetRight="0dp"
                            android:insetBottom="0dp"
                            android:padding="0dp"
                            app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
                            app:iconGravity="textStart"
                            app:iconPadding="0dp"
                            app:iconSize="24dp"
                            app:iconTint="@color/melon"
                            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/catBreedCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cat_margin_50"
            android:layout_marginStart="@dimen/cat_margin_20"
            android:layout_marginEnd="@dimen/cat_margin_20"
            app:layout_constraintTop_toBottomOf="@id/catFactCard">

            <LinearLayout
                android:id="@+id/catBreedContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/CatBreedTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/teal_300"
                    android:gravity="center"
                    android:text="@string/cat_breed_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/cat_size_20"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/catBreedImageView"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_weight="10"
                        android:layout_margin="@dimen/cat_margin_8"
                        android:padding="8dp"
                        android:src="@drawable/ic_cat_walking"
                        android:contentDescription="@string/cat_breed_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/CatMenuFactTextView" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/catBreedDescriptionTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/cat_margin_8"
                            android:layout_marginEnd="@dimen/cat_margin_8"
                            android:layout_marginTop="@dimen/cat_margin_12"
                            android:text="@string/cat_menu_breed_description" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/catBreedButton"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="@dimen/cat_margin_8"
                            android:layout_gravity="end"
                            android:padding="0dp"
                            android:insetLeft="0dp"
                            android:insetTop="0dp"
                            android:insetRight="0dp"
                            android:insetBottom="0dp"
                            app:iconPadding="0dp"
                            app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
                            app:iconTint="@color/teal_300"
                            app:iconSize="24dp"
                            app:iconGravity="textStart"
                            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
